fix: add croppie, change the modal type and move the main script to the bottom

--- a/styles/main.css
+++ b/styles/main.css
@@ -73,3 +73,7 @@
 button {
   background-color: #f10f11 !important;
 }
+
+.modal-card-body {
+  height: 700px;
+}
